bisonc++ (2.6.0)

  * Reorganized Bisonc++'s classes: public inheritance changed to private
    where possible, all virtual members now private. The parser->parserbase
    inheritance remains as-is (public) because parserbase essentially is a
    element of parser, defining types and the token-enum that must also be
    available to the users of the generated parser class. The alternative,
    defining types and tokens in the parser class would make it impossible to
    adapt the tokens without rewriting the parser class. Another alternative,
    defining the types and enum in a separate namespace imposes further
    restrictions on the users of the parser class, which is also considered
    undesirable. Public inheritance is now only used by NonTerminal, Terminal,
    and Symbol as these classes override virtual functions either in Symbol or
    in Element and the derived classes must all be usable where their base
    classes are expected (in accordance with the LSP).

bisonc++ (2.5.1)

  * Token values written to parserbase.h are (again) suppressed when their
    values exceed the previous token's value by 1. All values were shown
    because writer/insertToken erroneously didn't receive a size_t
    &lastTokenValue anymore, but a size_t lastTokenValue.

  * Removed Terminal's operator<< from the namespace std

  * Now using initializer_lists to initialize static data (generator/data.cc
    main.cc)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 08 Mar 2010 20:51:22 +0100

bisonc++ (2.5.0)

  * Renamed parser/spec/aux to parser/spec/auxiliary to avoid file/device
    confusion on some systems

  * Removed inclusions of superfluous bobcat/fnwrap1c headers

  * Replaced all FnWrap1c calls by FnWrap::unary

  * Added check for d_currentRule == 0 in rules/addproduction. d_currentRule
    could be a 0-pointer, in which case addproduction shouldn't do anything.
    d_currentRule is a 0-pointer in, e.g. the erroneous grammar submitted