@@ -1,2 +1,2 @@
-#define VERSION "2.6.0"
+#define VERSION "2.6.1"
 #define YEARS   "2005-2010"
